<resources>
    <string name="app_name">Car Wallet</string>
    <string name="service">Service</string>
    <string name="maintenance">Maintenance</string>
    <string name="garage">Garage</string>
    <string name="statistics">Statistics</string>
    <string name="trip">Trip</string>
    <string name="hint_manufacturer">Manufacturer</string>
    <string name="hint_model">Model</string>
    <string name="hint_shape">Vehicle type</string>
    <string name="hint_engine">Engine capacity (cmc)</string>
    <string name="hint_power">Vehicle power (CP)</string>
    <string name="hint_year">Year</string>
    <string name="hint_vin">VIN</string>
    <string name="hint_fuel">Fuel type</string>
    <string name="hint_mileage">Mileage</string>
    <string name="hint_at_mileage">At mileage</string>
    <string name="hint_license_no">License no</string>
    <string name="btn_add_car">Add</string>
    <string name="btn_add_car_edit">Edit</string>
    <string name="hint_service_title">Title</string>
    <string name="hint_service_description">Description</string>
    <string name="hint_service_price">Price</string>
    <string name="hint_service_date">Date</string>
    <string name="mins">Min</string>
    <string name="hour">Hour</string>
    <string name="byMonth">Month stats</string>
    <string name="byCar">Car stats</string>
    <string name="mostExpensiveCarRepairCosts">Most expensive car by repair costs</string>
    <string name="mostExpensiveCarMaintenanceCosts">Most expensive car by maintenance costs</string>
    <string name="mostExpensiveServiceHistory">Most expensive repair done</string>
    <string name="expenses">Expenses</string>

    <string-array name="shapes">
        <item>Select vehicle type...</item>
        <item>Cabriolet</item>
        <item>Estate Car</item>
        <item>SUV</item>
        <item>Saloon</item>
        <item>Hatchbakck</item>
        <item>Coupe</item>
        <item>Van / Minibus</item>
        <item>Other</item>
    </string-array>
    <string-array name="fuelTypes">
        <item>Select fuel type...</item>
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Electric</item>
        <item>Hybrid</item>
        <item>LPG</item>
        <item>Natural Gas</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok, got it</string>
    <string name="attention">Attention</string>
    <string name="licenseNoUniquieConstraint">You can`t have two cars with same license no. License no must be unique.</string>
    <string name="vinUniquieConstraint">You can`t have two cars with same VIN. VIN must be unique.</string>
    <string name="selectYear">Select year:</string>
    <string name="noDataAvailable">No data available.</string>
    <string name="january">January</string>
    <string name="march">March</string>
    <string name="february">February</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="hint_service_name">Service name</string>
    <string name="notes">Notes:</string>
    <string name="trips">Trips</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="avarage_consumption">Avarage consumption</string>
    <string name="distance">Distance</string>
    <string name="fuelPrice">Fuel price</string>
    <string name="save_trip">Save trip</string>
    <string name="total_price">Total price</string>
    <string name="calculate">Calculate</string>
    <string name="total_liters">Total liters</string>
    <string name="my_garage">My garage</string>
    <string name="active">Active</string>
    <string name="set_active">Set active</string>
    <string name="add_car_message">TO USE ALL THE FEATURES IN THIS APP PLEASE PARK YOUR FIRST CAR IN APP\'S GARAGE. \n\n ENJOY :)</string>
    <string name="start_now">Start now -></string>
    <string name="please_add_a_car_first">Please add a car first...</string>
    <string name="welcome_message">WELCOME ! \n LET\'S START BY CUSTOMIZE YOUR APP:</string>
    <string name="selectCurrency">Change currency:</string>
    <string name="selectDistance">Change distance measurement unit:</string>
    <string name="selectVolume">Change volume measurement unit:</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="save">Save</string>
    <string name="parametersSettings">Currency: </string>
    <string name="distance_measurement">Distance measurement unit:</string>
    <string name="volume_measurement">Volume measurement unit:</string>
    <string name="you_can_change_them_anytime_from_your_garage">You can change them anytime from your garage.</string>
    <string-array name="currecies">
        <item>Select currency...</item>
        <item>€</item>
        <item>$</item>
        <item>£</item>
        <item>¥</item>
        <item>₹</item>
        <item>₮</item>
        <item>₺</item>
        <item>₽</item>
        <item>₱</item>
        <item>฿</item>
        <item>₩</item>
        <item>﷼</item>
        <item>د.ا</item>
        <item>AED</item>
        <item>BAM</item>
        <item>BGN</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>CHF</item>
        <item>CRC</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EEK</item>
        <item>GEL</item>
        <item>GTQ</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>ISK</item>
        <item>JMD</item>
        <item>LTL</item>
        <item>LVL</item>
        <item>MDL</item>
        <item>MKD</item>
        <item>MTL</item>
        <item>MTL</item>
        <item>MXN</item>
        <item>NOK</item>
        <item>PEN</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>Rf</item>
        <item>RM</item>
        <item>RON</item>
        <item>Rs</item>
        <item>RSD</item>
        <item>SEK</item>
        <item>SKK</item>
        <item>TRY</item>
        <item>UAH</item>
        <item>UYU</item>
        <item>VEB</item>
        <item>XAF</item>
    </string-array>

    <string-array name="distance_measurement_units">
        <item>Select distance measurement unit...</item>
        <item>km</item>
        <item>mile</item>
        <item>yard</item>
    </string-array>

    <string-array name="volume_measurement_units">
        <item>Select volume measurement unit...</item>
        <item>l</item>
        <item>gal</item>
    </string-array>
</resources>
