<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_service"
        android:icon="@mipmap/ic_service"
        android:title="@string/service" />

    <item
        android:id="@+id/navigation_alerts"
        android:icon="@mipmap/ic_todo"
        android:title="@string/maintenance" />

    <item
        android:id="@+id/navigation_cars"
        android:icon="@mipmap/ic_car"
        android:title="@string/garage" />

    <item
    android:id="@+id/navigation_charts"
    android:icon="@drawable/ic_insert_chart"
    android:title="@string/statistics" />

    <item
        android:id="@+id/navigation_trip"
        android:icon="@drawable/ic_local_gas_station"
        android:title="@string/trip" />

</menu>
