<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryReplyBlue">

    <TextView
        android:id="@+id/currency_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryReplyOrange"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:text="@string/selectCurrency"/>
    <Spinner
        android:id="@+id/input_currency"
        android:layout_width="fill_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/currency_message"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/distance_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryReplyOrange"
        android:textSize="20sp"
        android:layout_below="@id/input_currency"
        android:text="@string/selectDistance"/>
    <Spinner
        android:id="@+id/input_distance"
        android:layout_width="fill_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/distance_message"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/volume_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryReplyOrange"
        android:textSize="20sp"
        android:layout_below="@+id/input_distance"
        android:text="@string/selectVolume"/>
    <Spinner
        android:id="@+id/input_volume"
        android:layout_width="fill_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/volume_message"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryReplyBlue"
        android:background="@drawable/button_start_now"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="25dp"
        android:elevation="4dp"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryReplyBlue"
        android:background="@drawable/button_start_now"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="25dp"
        android:elevation="4dp"
        />

</RelativeLayout>